--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "photosnap-site",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Mohamed Donzo",
+    "email": "demahom18@outlook.com"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
