--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
+    "gsap": "^3.6.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
   }
